--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -1,4 +1,5 @@
-<!DOCTYPE html>
+<% layout('layouts/boilerplate') %> 
+<!-- <!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -7,7 +8,7 @@
     <title>Camp Ground</title>
 </head>
 
-<body>
+<body> -->
     <h1>Camp Ground</h1>
     <div>
         <a href="/campgrounds/new">New Campground</a>
@@ -17,6 +18,6 @@
             <li><a href="/campgrounds/<%=campground.id%>"><%=campground.title%></a></li>
         <% } %>  
     </ul>
-</body>
+<!-- </body>
 
-</html>
+</html> -->
