--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -1,27 +1,17 @@
-<!DOCTYPE html>
-<html lang="en">
+<% layout('layouts/boilerplate') %> 
+<h1>
+    <%= campground.title %>
+</h1>
+<h2>
+    <%= campground.location %>
+</h2>
+<img src="<%=campground.image%> " alt="">
+<p><%= campground.description %> </p>
+<form action="/campgrounds/<%=campground._id%>?_method=DELETE" method="POST">
+    <button>Delete</button>
+</form>
+<p><a href="/campgrounds/<%=campground._id%>/edit">Edit Campground</a></p>
+<footer>
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Show</title>
-</head>
-
-<body>
-    <h1>
-        <%= campground.title %>
-    </h1>
-    <h2>
-        <%= campground.location %>
-    </h2>
-    <form action="/campgrounds/<%=campground._id%>?_method=DELETE" method="POST">
-        <button>Delete</button>
-    </form>
-    <p><a href="/campgrounds/<%=campground._id%>/edit">Edit Campground</a></p>
-    <footer>
-
-        <p><a href="/campgrounds">All Campgrounds</a></p>
-    </footer>
-</body>
-
-</html>
+    <p><a href="/campgrounds">All Campgrounds</a></p>
+</footer>
