--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -1,5 +1,5 @@
-<% layout('layouts/boilerplate') %> 
-<!-- <!DOCTYPE html>
+<% layout('layouts/boilerplate') %>
+    <!-- <!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -13,11 +13,23 @@
     <div>
         <a href="/campgrounds/new">New Campground</a>
     </div>
-    <ul>
-        <% for(let campground of campgrounds) { %>
-            <li><a href="/campgrounds/<%=campground.id%>"><%=campground.title%></a></li>
-        <% } %>  
-    </ul>
+    <% for(let campground of campgrounds) { %>
+        <div class="card mb-3">
+            <div class="col-md-4">
+                <img class="img-fluid" alt="" src="<%=campground.image%> ">
+            </div>
+            <div class="col-md-8">
+                <div class="card-body">
+                    <h5 class="card-title"><%=campground.title%> </h5>
+                    <p class="card-text"><%=campground.description%></p>
+                    <p class="card-text">
+                        <small class="text-muted"><%=campground.location%> </small>    
+                    </p>
+                    <a class="btn btn-primary" href="/campgrounds/<%=campground._id%>">View <%= campground.title %> </a>
+                </div>
+            </div>
+        </div>
+    <% } %>
 <!-- </body>
 
 </html> -->
