--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -1,8 +1,10 @@
 <% layout('layouts/boilerplate')%>
 <link rel="stylesheet" href="/stylesheets/star.css">
 
+
 <div class="row">
     <div class="col-6">
+    
          <div id="campgroundCarousel" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner">
                 <% campground.images.forEach((img, i) => {  %>
@@ -54,6 +56,8 @@
 
 
     <div class="col-6">
+        <div id='map' style='width: 100%; height: 300px;'></div>
+        
         <% if(currentUser) { %> 
         <h2>Leave a Review</h2>
         <form action="/campgrounds/<%=campground._id%>/reviews" method="POST" class="mb-3 validated-form" novalidate>
@@ -105,3 +109,10 @@
         <% } %>
     </div>
 </div>
+
+<script>
+    const mapToken = '<%-process.env.MAPBOX_TOKEN%>';
+    const campground = <%- JSON.stringify(campground) %>
+</script>
+
+<script src="/javascripts/showPageMap.js"></script>
