--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -1,7 +1,8 @@
 <% layout('layouts/boilerplate')%>
 <div class="row">
     <h1 class="text-center">New Campground</h1>
-    <div class="col-6 offset-3">
+    <div class="col-md-6 offset-md-3">
+        
         <form action="/campgrounds" method="POST" novalidate class="validated-form" enctype="multipart/form-data">
             <div class="mb-3">
                 <label class="form-label" for="title">Title</label>
@@ -60,6 +61,6 @@
                 <button class="btn btn-success">Add Campground</button>
             </div>
         </form>
-        <a href="/campgrounds">All Campgrounds</a>
+        <a class="mb-3" href="/campgrounds">All Campgrounds</a>
     </div>
 </div>
