--- a/views/users/register.ejs
+++ b/views/users/register.ejs
@@ -1,30 +1,45 @@
 <% layout('layouts/boilerplate')%>
-    <h1>Register</h1>
-    <form action="/register" method="POST" class="validated-form" novalidate>
+
+<div class="container d-flex justify-content-center align-items-center mt-5">
+    <div class="row">
+        <div class="col-md-6 offset-md-3 col-xl-4 offset-xl-4">
+            <div class="card shadow">
+                <img src="https://images.unsplash.com/photo-1533414417583-f0ab99151186?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80" 
+                class="card-img-top" alt="">
+                <div class="card-body">
+
+                    <h5 class="card-title">Register</h5>
+                    <form action="/register" method="POST" class="validated-form" novalidate>
         
-        <div class="mb-3">
-            <label class="form-label" for="username">Username:</label>
-            <input class="form-control" type="text" id="username" name="username" required>
-            <div class="valid-feedback">
-                Looks good!
+                        <div class="mb-3">
+                            <label class="form-label" for="username">Username:</label>
+                            <input class="form-control" type="text" id="username" name="username" autofocus required>
+                            <div class="valid-feedback">
+                                Looks good!
+                            </div>
+                        </div>
+                
+                        <div class="mb-3">
+                            <label class="form-label" for="email">Email:</label>
+                            <input class="form-control" type="email" id="email" name="email" required>
+                            <div class="valid-feedback">
+                                Looks good!
+                            </div>
+                        </div>
+                
+                        <div class="mb-3">
+                            <label class="form-label" for="password">Password:</label>
+                            <input class="form-control" type="text" id="password" name="password" required>
+                            <div class="valid-feedback">
+                                Looks good!
+                            </div>
+                        </div>
+                
+                        <button class="btn btn-success btn-block">Register</button>
+                    </form>
+                
+                </div>
             </div>
         </div>
-
-        <div class="mb-3">
-            <label class="form-label" for="email">Email:</label>
-            <input class="form-control" type="email" id="email" name="email" required>
-            <div class="valid-feedback">
-                Looks good!
-            </div>
-        </div>
-
-        <div class="mb-3">
-            <label class="form-label" for="password">Password:</label>
-            <input class="form-control" type="text" id="password" name="password" required>
-            <div class="valid-feedback">
-                Looks good!
-            </div>
-        </div>
-
-        <button class="btn btn-success">Register</button>
-    </form>
+    </div>
+</div>
